--- a/docs/howtos/nlp/index-nlp.mdx
+++ b/docs/howtos/nlp/index-nlp.mdx
@@ -217,3 +217,9 @@ Output of the matcher: nodes and edges are candidates to use another RedisGears 
 We took OCR scans in JSON format and turned them into Knowledge Graph, demonstrating how you can traditional Semantic Network/OWL/Methathesaurus technique based on Unified Medical Language System. Redis Ecosystem offers a lot to the data science community, and can take place at the core of Kaggle notebooks, ML frameworks and make deployment and distribution of data more enjoyable. The success of our industry depends on how our tools work together — regardless of whether they are engineering, data science, machine learning and organisational or architectural.
 
 With help of RedisLabs guys and community full pipeline code is available https://github.com/applied-knowledge-systems/the-pattern-platform if you want to try it locally there is a docker launch script and short quickstart guide. PR and suggestions are welcome, overall goal of the project is to allow other to build their more interesting pipeline on top of it.
+
+### References
+
+- [Covid19 - Redis Knowledge Graph in 3D](http://thepattern.digital/)
+- [COVID-19 Open Research Dataset Challenge (CORD-19)](https://www.kaggle.com/allen-institute-for-ai/CORD-19-research-challenge)
+- [Source Code for NLP pipeline based on RedisGears ](https://github.com/applied-knowledge-systems/the-pattern-platform)
