--- a/docs/howtos/frauddetection/index-frauddetection.mdx
+++ b/docs/howtos/frauddetection/index-frauddetection.mdx
@@ -310,7 +310,12 @@ This creates a dashboard ‘Fraud Stats’. If you get an error while importing 
 - To reject servicing requests altogether, the redis-cell module to rate limit requests against a key can be used.
 - Redis AI and neural-redis can be used to build to improve efficiency of identifying fraud based.
 
+### References and Links
 
+- [Source Code](https://github.com/redis-developer/redis-datasets/tree/master/use-cases/fraud-detection)
+- [Build modern fraud-detection platforms with Redis Enterprise](https://redislabs.com/solutions/use-cases/fraud-detection/)
+- [Redis Enterprise to Power Modern Fraud-Detection Platforms](https://lp.redislabs.com/rs/915-NFD-128/images/RedisLabs-Solution-Fraud-Detection.pdf)
+- [LifeLock Counts on Redis Enterprise for Fraud Mitigation](https://redislabs.com/docs/lifelock-counts-redis-enterprise-fraud-mitigation/)
 
 
 
