--- a/docs/howtos/frauddetection/index-frauddetection.mdx
+++ b/docs/howtos/frauddetection/index-frauddetection.mdx
@@ -43,9 +43,9 @@ You can follow https://docs.docker.com/get-docker/ to get Docker installed on yo
 You will need a Redis server up and running on your local machine. You can use the below CLI to bring up Redis server with RedisGears.
 
 
-```
-$ docker run -d -p 6379:6379 redislabs/redismod
-```
+ ```bash
+  $ docker run -d -p 6379:6379 redislabs/redismod
+ ```
 
 The command will pull the image from redis docker repo and start the Redis server with all the required modules and the logs ends like this.
 
@@ -53,9 +53,9 @@ The command will pull the image from redis docker repo and start the Redis serve
 
 ### Step #3: Cloning the Repository
 
-```
-$ git clone https://github.com/redis-developer/redis-datasets.git
-```
+ ```bash
+  $ git clone https://github.com/redis-developer/redis-datasets.git
+ ```
 
 
 
@@ -63,9 +63,9 @@ $ git clone https://github.com/redis-developer/redis-datasets.git
 
 Change directory to fraud-detection
 
-```
-$ cd redis-datasets/use-cases/fraud-detection
-```
+ ```bash
+  $ cd redis-datasets/use-cases/fraud-detection
+ ```
 
 
 The code is present in use-cases/fraud-detection. The app is dockerized with necessary packages (including client packages for redis modules). 
@@ -74,25 +74,25 @@ Create the image using the command:
 
 
 
-```
-$ docker build -t redis-fraud:latest .
-```
+ ```bash
+  $ docker build -t redis-fraud:latest .
+ ```
 
 
 Create the container using the command:
 
 
-```
-$ docker run -e REDIS_HOST='<host>' -e REDIS_PORT=6379 -p 5000:5000 -d redis-fraud
-```
+ ```bash
+  $ docker run -e REDIS_HOST='<host>' -e REDIS_PORT=6379 -p 5000:5000 -d redis-fraud
+ ```
 
 You will get the container Id, which can be used to tail application logs.
 
 
 
-```
-$ docker logs -f <container-id>
-```
+ ```
+  $ docker logs -f <container-id> 
+ ```
 
 If you are using a redismod image to run Redis locally, please provide the IP of the host machine (and not localhost or 127.0.0.1).
 
@@ -100,17 +100,17 @@ If you are using a redismod image to run Redis locally, please provide the IP of
 
 Let's take a look at how connections are managed in this project.
 
-```
-import os
-import redis
-from redisbloom.client import Client
-from singleton_decorator import singleton
+ ```python
+  import os
+  import redis
+  from redisbloom.client import Client
+  from singleton_decorator import singleton
 
 
-@singleton
-class RedisConn:
-	def __init__(self):
-    	host = os.getenv("REDIS_HOST")
+  @singleton
+  class RedisConn:
+  	def __init__(self):
+     	host = os.getenv("REDIS_HOST")
     	port = os.getenv("REDIS_PORT")
 
     	if not host or not port:
@@ -125,7 +125,7 @@ class RedisConn:
 
 	def bloom(self):
     		return self.bloom_client
-```
+ ```
 
 In line 2, we import the redis package for package. All the core Redis commands are available in this Redis package.
 
@@ -138,8 +138,8 @@ gist: https://gist.github.com/Sachin-Kottarathodi/c3a0647d3fdd0fe8a76425e0594e11
 
 
 
-```
-def ip_fraud(self, data):
+ ```python
+  def ip_fraud(self, data):
    	 exists = RedisConn().bloom().cfExists(Constants.IP_CUCKOO_FILTER_NAME, data['ip'])
    	 if exists:
    		 data['fraud_type'] = Constants.IP_BLACKLIST
@@ -147,7 +147,7 @@ def ip_fraud(self, data):
 
    	 return exists
 
-def click_spam(self, data):
+  def click_spam(self, data):
 	is_click_spammed = False
 	count = RedisConn().redis().zcount(data.get('device_id'), data['ts'] - self.click_spam_window_in_sec, data['ts'])
 	if count >= self.click_spam_threshold:
@@ -156,9 +156,9 @@ def click_spam(self, data):
 		 data['status'] = Constants.FRAUD
 	return is_click_spammed
 
-def publish(self, data):
+  def publish(self, data):
 	RedisConn().redis().xadd(Constants.STREAM_NAME, data, id='*')
-```
+ ```
 
 In the above code, Cuckoo Filter is used to find blacklisted IP fraud. Cuckoo Filter is a probabilistic data structure that’s part of the module, RedisBloom. Checking for existence of IP in Cuckoo Filter is done using the cfExists method provided by bloom client. Please note that Cuckoo Filter can return false positives. To configure the error rate, cf.reserve command can be used to create the filter and custom bucket size can be provided.
 
@@ -174,22 +174,22 @@ code for reference:
 
 
 
-```
-from gearsclient import GearsRemoteBuilder as GearsBuilder
-from redistimeseries.client import Client
+ ```
+  from gearsclient import GearsRemoteBuilder as GearsBuilder
+  from redistimeseries.client import Client
 
-def stream_handler(item):
-  data = item['value']
-  member = json.dumps(
+  def stream_handler(item):
+   data = item['value']
+   member = json.dumps(
   	{'device_id': data['device_id'],
    	'transaction_id': data['transaction_id'],
    	'ts': data['ts'],
    	})
-  redis.Redis().zadd(data.get('device_id'), {member: data['ts']})
-  Client().incrby(data['fraud_type'], 1)
+   redis.Redis().zadd(data.get('device_id'), {member: data['ts']})
+   Client().incrby(data['fraud_type'], 1)
 
-GearsBuilder(reader='StreamReader', r=redis_conn, requirements=["redis", "redistimeseries"]).foreach(stream_handler).register('data_stream')
-```
+   GearsBuilder(reader='StreamReader', r=redis_conn, requirements=["redis", "redistimeseries"]).foreach(stream_handler).register('data_stream')
+ ```
 
 As mentioned before, since RedisGears and RedisTimeSeries are modules, we need to use the clients provided in their respective packages.
 
@@ -208,15 +208,15 @@ Code for ref:
 
 
 
-```
-from flask import Flask, request
-from fraud_checks import FraudChecks
-from setup import Setup
-app = Flask(__name__)
+ ```python
+  from flask import Flask, request
+  from fraud_checks import FraudChecks
+  from setup import Setup
+  app = Flask(__name__)
 
 
-@app.route('/', methods=['POST'])
-def check_fraud():
+  @app.route('/', methods=['POST'])
+  def check_fraud():
 	try:
     	response = FraudChecks().check_fraud(request.get_json())
     	code = 200
@@ -228,10 +228,10 @@ def check_fraud():
 	return response, code
 
 
-if __name__ == '__main__':
+  if __name__ == '__main__':
 	Setup().init()
 	app.run(port=5000, debug=False, host='0.0.0.0')
-```
+ ```
 
 Here, the app is exposed on port 5000. Before starting the server, our init method of setup is called to register the gear.The endpoint calls the function that does the fraud checks and returns the response.
 
@@ -239,22 +239,22 @@ The application is written in python and exposes an endpoint which accepts a few
 
 
 
-```
-$ curl --request POST 'localhost:5000' --header 'Content-Type: application/json' --data-raw '{
+ ```bash
+  $ curl --request POST 'localhost:5000' --header 'Content-Type: application/json' --data-raw '{
        "device_id": "111-000-000",
        "ip": "1.1.1.1",
        "transaction_id": "3e4fad5fs"}'
-clean
-```
+  clean
+ ```
 
 Since initially no data is available in Cuckoo Filter, all IPs will be allowed through.
 To add data to Cuckoo Filter, connect to Redis using cli and run the command
 
 
 
-```
-cf.addnx ip_cf 1.1.1.1
-```
+ ```bash
+  cf.addnx ip_cf 1.1.1.1
+ ```
 
 Run the post command with this IP again. This time, the result will be ip_blacklist.
 
@@ -279,9 +279,9 @@ Optional: The following variables can be configured during the ‘docker run’ 
 
 It’s exciting to see the fraud detection  plotted in Grafana. To implement this, run the command below:
  
-```
-$ docker run -d -e "GF_INSTALL_PLUGINS=redis-app" -p 3000:3000 grafana/grafana
-```
+ ```bash
+  $ docker run -d -e "GF_INSTALL_PLUGINS=redis-app" -p 3000:3000 grafana/grafana
+ ```
 
 Point your browser to https://<IP_ADDRESS>:3000. 
 
