--- a/docs/howtos/nlp/index-nlp.mdx
+++ b/docs/howtos/nlp/index-nlp.mdx
@@ -12,7 +12,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 import RedisCard from '@site/src/theme/RedisCard';
 
 
-Author - Alex Mikhalev, Ajeet Singh Raina
+Authors - [Alex Mikhalev](https://www.linkedin.com/in/alexmikhalev/), [Ajeet Singh Raina](https://www.linkedin.com/in/ajeetsraina/)
 
 ##  Goal
 
@@ -53,7 +53,7 @@ Concepts have CUI (Concept Unique Identifiers) and those will be primary keys in
 
 Intake step - is very simple put all JSON records into RedisCluster, then NLP pipeline starts processing all records, code is [here](https://github.com/applied-knowledge-systems/the-pattern-platform/blob/main/RedisIntakeRedisClusterSample.py).
 
-### How are the steps of the NLP pipeline fit into RedisGears? 
+### How does the NLP pipeline steps fit into RedisGears? 
 
 1.For each record — detect language (discard non English), it’s [filter](https://oss.redislabs.com/redisgears/operations.html#filter)
 
@@ -72,24 +72,24 @@ Ensure that you install virtualenv in your system
 
 ### Step 2. Clone the repository
 
-```
-git clone --recurse-submodules https://github.com/applied-knowledge-systems/the-pattern.git
-cd the-pattern
-```
+ ```bash
+  git clone --recurse-submodules https://github.com/applied-knowledge-systems/the-pattern.git
+  cd the-pattern
+ ```
 
 ### Step 3. Bring up the application
 
-```
-docker-compose -f docker-compose.dev.yml up --build -d
-```
+ ```bash
+  docker-compose -f docker-compose.dev.yml up --build -d
+ ```
 
 ### Step 4. Apply cluster configuration settings
 
 You can deploy PyTorch and spacy to run on RedisGears.
 
-```
-bash post_start_dev.sh
-```
+ ```bash
+  bash post_start_dev.sh
+ ```
 
 
 :::important
@@ -101,31 +101,31 @@ One need to change a few default parameters for rgcluster to accommodate the siz
 
 ### Step 5. Create or activate Python virtual environment 
 
-```
-cd ./the-pattern-platform/
-```
+ ```bash
+  cd ./the-pattern-platform/
+ ```
 
 ### Step 6. Create new environment 
 
 You can create it via 
 
-```
-conda create -n pattern_env python=3.8
-```
+ ```bash
+  conda create -n pattern_env python=3.8
+ ```
  or 
 
 Alternatively, you can activate by using the below CLI: 
 
-```
-source ~/venv_cord19/bin/activate #or create new venv
-pip install -r requirements.txt
-```
+ ```bash
+  source ~/venv_cord19/bin/activate #or create new venv
+  pip install -r requirements.txt
+ ```
 
 ### Step 7. Run pipeline
 
-```
-bash cluster_pipeline.sh
-```
+ ```
+  bash cluster_pipeline.sh
+ ```
 
 
 ### Step 8. Validating the functionality of the NLP pipeline
@@ -134,29 +134,30 @@ Wait for a bit and then check:
 
 ### Verifying Redis Graph populated: 
 
-```
-redis-cli -p 9001 -h 127.0.0.1 GRAPH.QUERY cord19medical "MATCH (n:entity) RETURN count(n) as entity_count" 
-redis-cli -p 9001 -h 127.0.0.1 GRAPH.QUERY cord19medical "MATCH (e:entity)-[r]->(t:entity) RETURN count(r) as edge_count"
-```
+ ```bash
+  redis-cli -p 9001 -h 127.0.0.1 GRAPH.QUERY cord19medical "MATCH (n:entity) RETURN count(n) as entity_count" 
+  redis-cli -p 9001 -h 127.0.0.1 GRAPH.QUERY cord19medical "MATCH (e:entity)-[r]->(t:entity) RETURN count(r) as edge_count"
+ ```
 ### Checking API responds: 
 
-```
-curl -i -H "Content-Type: application/json" -X POST -d '{"search":"How does temperature and humidity affect the transmission of 2019-nCoV"}' http://localhost:8080/gsearch
-```
+ ```bash
+  curl -i -H "Content-Type: application/json" -X POST -d '{"search":"How does temperature and humidity affect the transmission of 2019-nCoV"}'      
+  http://localhost:8080/gsearch
+ ```
 
 ## Walkthrough
 
 While RedisGears allows to deploy and run Machine Learning libraries like [spacy](https://github.com/AlexMikhalev/cord19redisknowledgegraph/blob/master/spacy_sentences_geared.py) and [BERT transformers](https://github.com/AlexMikhalev/cord19redisknowledgegraph/blob/master/tokenizer_bert_geared.py), the solution above uses simpler approach:
 
-```
-gb = GB('KeysReader')
-gb.filter(filter_language)
-gb.flatmap(parse_paragraphs)
-gb.map(spellcheck_sentences)
-gb.foreach(save_sentences)
-gb.count()
-gb.register('paragraphs:*',keyTypes=['string','hash'], mode="async_local")
-```
+ ```
+  gb = GB('KeysReader')
+  gb.filter(filter_language)
+  gb.flatmap(parse_paragraphs)
+  gb.map(spellcheck_sentences)
+  gb.foreach(save_sentences)
+  gb.count()
+  gb.register('paragraphs:*',keyTypes=['string','hash'], mode="async_local")
+ ```
 
 This is the overall pipeline: those 7 lines allow you to run logic in a distributed cluster or on a single machine using all available CPUs - no changes required until you need to scale over more 1000 nodes. I use KeysReader registered for namespace paragraphs for all strings or hashes. My pipeline would need to run in async mode. For data scientists, I would recommend using gb.run to make sure gears function work and it will run in batch mode and then change it to register - to capture new data. By default, functions will return output, hence the need for count() - to prevent fetching the whole dataset back to the command issuing machine (90 GB for Cord19). 
 
@@ -166,19 +167,19 @@ Things to keep in mind:
 
 1. Node process can only save locally - we don't move data, anything you want to save should have hashtag, for example to add to the set of processed_docs:
 
-```
-execute('SADD','processed_docs_{%s}' % hashtag(),article_id)
-```
+ ```
+  execute('SADD','processed_docs_{%s}' % hashtag(),article_id)
+ ```
 
 2. Loading external libraries into the computational threat, for example, symspell requires additional dictionaries and needs two steps to load:
 
-```
-"""
-load symspell and relevant dictionaries
-"""
-sym_spell=None 
+ ```
+  """
+  load symspell and relevant dictionaries
+  """
+  sym_spell=None 
 
-def load_symspell():
+  def load_symspell():
     import pkg_resources
     from symspellpy import SymSpell, Verbosity
     sym_spell = SymSpell(max_dictionary_edit_distance=1, prefix_length=7)
@@ -191,17 +192,17 @@ def load_symspell():
     sym_spell.load_dictionary(dictionary_path, term_index=0, count_index=1)
     sym_spell.load_bigram_dictionary(bigram_path, term_index=0, count_index=2)
     return sym_spell
-```
+ ```
 
 3. Scispacy is a great library and data science tool, but after a few iterations with deploying it I ended up reading data model documentation for UMLS Methathesaurus and decided to build Aho-Corasick automata directly from UMLS data. (MRXW_ENG.RRF contains all terms form for English mapped to CUI). Aho-Corasick allowed me to match incoming sentences into pairs of nodes (concepts from the medical dictionary) and present sentences as edges in a graph, Gears related code is simple:
 
-```
-bg = GearsBuilder('KeysReader')
-bg.foreach(process_item)
-bg.count()
-bg.register('sentence:*',  mode="async_local",onRegistered=OnRegisteredAutomata)
+ ```
+  bg = GearsBuilder('KeysReader')
+  bg.foreach(process_item)
+  bg.count()
+  bg.register('sentence:*',  mode="async_local",onRegistered=OnRegisteredAutomata)
 
-```
+ ```
 
 OnRegisteredAutomata will perform similarly to symspell example above except it will download pre-build Aho-Corasick automata (30Mb). 
 Aho-Corasick is a very fast matcher and allows to perform >900 Mb text per second even on commodity laptop, RedisGears cluster makes a very smooth distribution of data and ML model and matching using available CPU and Memory. Full matcher [code](https://github.com/applied-knowledge-systems/the-pattern-platform/blob/main/sentences_matcher_register.py).
