--- a/docs/howtos/ratelimiting/index-ratelimiting.mdx
+++ b/docs/howtos/ratelimiting/index-ratelimiting.mdx
@@ -207,4 +207,10 @@ Point your browser to http://IP:5000 and you will be able to select various requ
 
  </TabItem>
 </Tabs>
-  
+
+### References
+
+- [Basic Rate Limiting](https://redislabs.com/redis-best-practices/basic-rate-limiting/)
+- [Rate Limting with Redis Webinar](https://redislabs.com/webinars-on-demand/rate-limiting-with-redis/)
+- [How to use Redis for real-time metering applications](https://www.infoworld.com/article/3230455/how-to-use-redis-for-real-time-metering-applications.html)
+- [redis-cell: a Rate Limiting Redis Module](https://redislabs.com/blog/redis-cell-rate-limiting-redis-module/)
