--- a/docs/howtos/redisgraphmovies/index-redisgraphmovies.mdx
+++ b/docs/howtos/redisgraphmovies/index-redisgraphmovies.mdx
@@ -9,7 +9,7 @@ IMDb(Internet Movie Database) is the world's most popular and authoritative sour
 
 ![moviedb](moviedb_frontpage.png)
 
-### Technical Stack
+### Tech Stack
 
 - Frontend - React
 - Backend - Node.js, Redis, RedisGraph
