Added overview for Develop

--- a/docs/develop/index-develop.mdx
+++ b/docs/develop/index-develop.mdx
@@ -1,12 +1,77 @@
 ---
 id: index-develop
-title: Develop
-hide_title: true
-sidebar_label: Develop
-hide_table_of_contents: true
-slug: /develop/
-custom_edit_url: 
+title: Develop your application using programming languages  
+sidebar_label: Overview 
+slug: /develop
 ---
-import Languages from '@theme/Languages';
 
-<Languages />
+import RedisCard from '@site/src/theme/RedisCard';
+
+Find documentation, sample code and tools to develop with your favorite language.
+
+
+<div class="row">
+
+ <div class="col">
+     <RedisCard 
+        title="Java and Redis" 
+        imgPath="recloud.png"
+        description="Getting Started with Java and Redis" 
+        preview="recloud.png"
+        page="/develop/java"
+        />
+ </div>
+
+
+ <div class="col">
+    <RedisCard 
+        title="Python and Redis" 
+        description="Getting Started with Python and Redis" 
+        page="/develop/python"
+        />
+ </div>
+
+
+ <div class="col">
+    <RedisCard 
+        title="Node.js and Redis" 
+        description="Getting Started with Node.js and Redis" 
+        page="/develop/node"
+        />
+ </div>
+</div>
+
+ <div class="row">
+
+ <div class="col">
+     <RedisCard
+        title="Go and Redis"
+        imgPath="recloud.png"
+        description="Getting Started with Golang and Redis"
+        preview="recloud.png"
+        page="/develop/golang"
+        />
+</div>
+
+
+ <div class="col">
+    <RedisCard
+        title="Ruby and Redis"
+        description="Getting Started with Ruby and Redis"
+        page="/develop/ruby"
+        />
+ </div>
+
+
+ <div class="col">
+    <RedisCard
+        title="Php and Redis"
+        description="Getting Started with Php and Redis"                   
+        page="/develop/php"
+        />
+ </div>
+</div>
+
+
+
+
