--- a/docs/howtos/index-howtos.mdx
+++ b/docs/howtos/index-howtos.mdx
@@ -19,7 +19,7 @@ This page holds a catalog with dozens of ready-to-use app listings from Redis La
      <RedisCard 
         title="Rate Limiting" 
         imgPath="ratelimiting.png"
-        description="How to build a Rate Limter using Redis" 
+        description="How to build a Rate Limiter using Redis" 
         preview="ratelimiting.png"
         page="/howtos/ratelimiting/"
         />
