--- a/docs/howtos/chatapp/index-chatapp.mdx
+++ b/docs/howtos/chatapp/index-chatapp.mdx
@@ -16,7 +16,7 @@ In this tutorial, we will see how to build a basic chat application built with F
 ![Chatapp](chatapp_homepage.png)
 
 
-### Step 1. Pre-requisite
+### Step 1. Prerequisite
 
 - Python 3.6+
 
