--- a/docs/develop/node/index-node.mdx
+++ b/docs/develop/node/index-node.mdx
@@ -120,7 +120,7 @@ Find more information about Redis & node-redis connections in the "[Redis Connec
 **[Basic Redis Caching](https://github.com/redis-developer/basic-caching-demo-nodejs)**
 This application call the GitHub API and cache the results into Redis.
 
-**[Redis Rate-Limiting](https://github.com/redis-developer/basic-redis-rate-limiting-demo-nodejs)**
+**[Redis Rate-Limiting](https://developer.redislabs.com/howtos/ratelimiting/)**
 This is a very simple app that demonstrates rate-limiting feature using Redis.
 
 **[Notifications with WebSocket, Vue & Redis](https://github.com/redis-developer/redis-websockets-vue-notifications)**
