--- a/docs/develop/node/index-node.mdx
+++ b/docs/develop/node/index-node.mdx
@@ -117,7 +117,7 @@ Find more information about Redis & node-redis connections in the "[Redis Connec
 
 #### Sample Code
 
-**[Basic Redis Caching](https://github.com/redis-developer/basic-caching-demo-nodejs)**
+**[Basic Redis Caching](https://developer.redislabs.com/howtos/caching/)**
 This application call the GitHub API and cache the results into Redis.
 
 **[Redis Rate-Limiting](https://developer.redislabs.com/howtos/ratelimiting/)**
