--- a/docs/howtos/nlp/index-nlp.mdx
+++ b/docs/howtos/nlp/index-nlp.mdx
@@ -59,13 +59,13 @@ Intake step - is very simple put all JSON records into RedisCluster, then NLP pi
 
 ### How does the NLP pipeline steps fit into RedisGears? 
 
-1.For each record — detect language (discard non English), it’s [filter](https://oss.redislabs.com/redisgears/operations.html#filter)
+1. For each record — detect language (discard non English), it’s [filter](https://oss.redislabs.com/redisgears/operations.html#filter)
 
-2.Map paragraphs into a sentence — [flatmap](https://oss.redislabs.com/redisgears/operations.html#flatmap)
+2. Map paragraphs into a sentence — [flatmap](https://oss.redislabs.com/redisgears/operations.html#flatmap)
 
-3.Sentences spellchecker — it’s [map](https://oss.redislabs.com/redisgears/operations.html#map)
+3. Sentences spellchecker — it’s [map](https://oss.redislabs.com/redisgears/operations.html#map)
 
-4.Save sentences into hash — [processor](https://oss.redislabs.com/redisgears/operations.html#processor)
+4. Save sentences into hash — [processor](https://oss.redislabs.com/redisgears/operations.html#processor)
 
 
 
@@ -76,24 +76,24 @@ Ensure that you install virtualenv in your system
 
 ### Step 2. Clone the repository
 
- ```bash
-  git clone --recurse-submodules https://github.com/applied-knowledge-systems/the-pattern.git
-  cd the-pattern
- ```
+  ```bash
+   git clone --recurse-submodules https://github.com/applied-knowledge-systems/the-pattern.git
+   cd the-pattern
+  ```
 
 ### Step 3. Bring up the application
 
- ```bash
-  docker-compose -f docker-compose.dev.yml up --build -d
- ```
+  ```bash
+   docker-compose -f docker-compose.dev.yml up --build -d
+  ```
 
 ### Step 4. Apply cluster configuration settings
 
 You can deploy PyTorch and spacy to run on RedisGears.
 
- ```bash
-  bash post_start_dev.sh
- ```
+  ```bash
+   bash post_start_dev.sh
+  ```
 
 
 :::important
@@ -105,31 +105,31 @@ One need to change a few default parameters for rgcluster to accommodate the siz
 
 ### Step 5. Create or activate Python virtual environment 
 
- ```bash
-  cd ./the-pattern-platform/
- ```
+  ```bash
+   cd ./the-pattern-platform/
+  ```
 
 ### Step 6. Create new environment 
 
 You can create it via 
 
- ```bash
-  conda create -n pattern_env python=3.8
- ```
+  ```bash
+   conda create -n pattern_env python=3.8
+  ```
  or 
 
 Alternatively, you can activate by using the below CLI: 
 
- ```bash
-  source ~/venv_cord19/bin/activate #or create new venv
-  pip install -r requirements.txt
- ```
+  ```bash
+   source ~/venv_cord19/bin/activate #or create new venv
+   pip install -r requirements.txt
+  ```
 
 ### Step 7. Run pipeline
 
- ```
-  bash cluster_pipeline.sh
- ```
+  ```
+   bash cluster_pipeline.sh
+  ```
 
 
 ### Step 8. Validating the functionality of the NLP pipeline
@@ -138,30 +138,30 @@ Wait for a bit and then check:
 
 ### Verifying Redis Graph populated: 
 
- ```bash
-  redis-cli -p 9001 -h 127.0.0.1 GRAPH.QUERY cord19medical "MATCH (n:entity) RETURN count(n) as entity_count" 
-  redis-cli -p 9001 -h 127.0.0.1 GRAPH.QUERY cord19medical "MATCH (e:entity)-[r]->(t:entity) RETURN count(r) as edge_count"
- ```
+  ```bash
+   redis-cli -p 9001 -h 127.0.0.1 GRAPH.QUERY cord19medical "MATCH (n:entity) RETURN count(n) as entity_count" 
+   redis-cli -p 9001 -h 127.0.0.1 GRAPH.QUERY cord19medical "MATCH (e:entity)-[r]->(t:entity) RETURN count(r) as edge_count"
+  ```
 ### Checking API responds: 
 
- ```bash
-  curl -i -H "Content-Type: application/json" -X POST -d '{"search":"How does temperature and humidity affect the transmission of 2019-nCoV"}'      
-  http://localhost:8080/gsearch
- ```
+  ```bash
+   curl -i -H "Content-Type: application/json" -X POST -d '{"search":"How does temperature and humidity affect the transmission of 2019-nCoV"}'      
+   http://localhost:8080/gsearch
+  ```
 
 ## Walkthrough
 
 While RedisGears allows to deploy and run Machine Learning libraries like [spacy](https://github.com/AlexMikhalev/cord19redisknowledgegraph/blob/master/spacy_sentences_geared.py) and [BERT transformers](https://github.com/AlexMikhalev/cord19redisknowledgegraph/blob/master/tokenizer_bert_geared.py), the solution above uses simpler approach:
 
- ```
-  gb = GB('KeysReader')
-  gb.filter(filter_language)
-  gb.flatmap(parse_paragraphs)
-  gb.map(spellcheck_sentences)
-  gb.foreach(save_sentences)
-  gb.count()
-  gb.register('paragraphs:*',keyTypes=['string','hash'], mode="async_local")
- ```
+  ```python
+   gb = GB('KeysReader')
+   gb.filter(filter_language)
+   gb.flatmap(parse_paragraphs)
+   gb.map(spellcheck_sentences)
+   gb.foreach(save_sentences)
+   gb.count()
+   gb.register('paragraphs:*',keyTypes=['string','hash'], mode="async_local")
+  ```
 
 This is the overall pipeline: those 7 lines allow you to run logic in a distributed cluster or on a single machine using all available CPUs - no changes required until you need to scale over more 1000 nodes. I use KeysReader registered for namespace paragraphs for all strings or hashes. My pipeline would need to run in async mode. For data scientists, I would recommend using gb.run to make sure gears function work and it will run in batch mode and then change it to register - to capture new data. By default, functions will return output, hence the need for count() - to prevent fetching the whole dataset back to the command issuing machine (90 GB for Cord19). 
 
@@ -171,19 +171,19 @@ Things to keep in mind:
 
 1. Node process can only save locally - we don't move data, anything you want to save should have hashtag, for example to add to the set of processed_docs:
 
- ```
-  execute('SADD','processed_docs_{%s}' % hashtag(),article_id)
- ```
+  ```python
+   execute('SADD','processed_docs_{%s}' % hashtag(),article_id)
+  ```
 
 2. Loading external libraries into the computational threat, for example, symspell requires additional dictionaries and needs two steps to load:
 
- ```
-  """
-  load symspell and relevant dictionaries
-  """
-  sym_spell=None 
+  ```python
+   """
+   load symspell and relevant dictionaries
+   """
+   sym_spell=None 
 
-  def load_symspell():
+   def load_symspell():
     import pkg_resources
     from symspellpy import SymSpell, Verbosity
     sym_spell = SymSpell(max_dictionary_edit_distance=1, prefix_length=7)
@@ -196,7 +196,7 @@ Things to keep in mind:
     sym_spell.load_dictionary(dictionary_path, term_index=0, count_index=1)
     sym_spell.load_bigram_dictionary(bigram_path, term_index=0, count_index=2)
     return sym_spell
- ```
+  ```
 
 3. Scispacy is a great library and data science tool, but after a few iterations with deploying it I ended up reading data model documentation for UMLS Methathesaurus and decided to build Aho-Corasick automata directly from UMLS data. (MRXW_ENG.RRF contains all terms form for English mapped to CUI). Aho-Corasick allowed me to match incoming sentences into pairs of nodes (concepts from the medical dictionary) and present sentences as edges in a graph, Gears related code is simple:
 
@@ -221,7 +221,7 @@ Output of the matcher: nodes and edges are candidates to use another RedisGears 
 
 We took OCR scans in JSON format and turned them into Knowledge Graph, demonstrating how you can traditional Semantic Network/OWL/Methathesaurus technique based on Unified Medical Language System. Redis Ecosystem offers a lot to the data science community, and can take place at the core of Kaggle notebooks, ML frameworks and make deployment and distribution of data more enjoyable. The success of our industry depends on how our tools work together — regardless of whether they are engineering, data science, machine learning and organisational or architectural.
 
-With help of RedisLabs guys and community full pipeline code is available https://github.com/applied-knowledge-systems/the-pattern-platform if you want to try it locally there is a docker launch script and short quickstart guide. PR and suggestions are welcome, overall goal of the project is to allow other to build their more interesting pipeline on top of it.
+With the collaboration of RedisLabs and community, the full pipeline code is available via https://github.com/applied-knowledge-systems/the-pattern-platform. In case, you want to try it locally, then you can find a Docker Launch script in the root of the repository along with short quickstart guide. PR and suggestions are welcome. The overall goal of the project is to allow other to build their more interesting pipeline on top of it. 
 
 ### References
 
